fix Spacing keywords

--- a/src/css/Home.css
+++ b/src/css/Home.css
@@ -53,7 +53,7 @@
   display: flex;
   flex-direction: column;
   justify-content: space-between;
-  padding: 75px 0px 50px;
+  padding: 75px 0px 50px 30px;
 
 }
 
@@ -63,7 +63,7 @@
   flex-direction: row;
   justify-content: space-between;
   align-items: center;
-  padding-top: 20px;
+  padding-top: 10px;
   padding-right: 20px;
   padding-left: 20px;
 }
